# proto2prod-platform

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: platform-ci.yml
