[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto2prod-platform"
version = "0.1.0"
description = "End-to-end prototype→production pipeline platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Team", email = "team@yourorg.com" }]
